--- a/web-services/tests/product-web-service-tests.html
+++ b/web-services/tests/product-web-service-tests.html
@@ -61,6 +61,26 @@ window.addEventListener("load", ()=>{
 		http.send();
 	});
 
+	document.getElementById("btnGetByUpc").addEventListener("click", ()=>{
+		
+		var upc = prompt("Enter a upc");
+
+		var url = baseURL + upc;
+
+		var http = new XMLHttpRequest();
+		http.open("GET", url);
+		
+		http.addEventListener("readystatechange", ()=>{
+			if(http.readyState == 4 && http.status == 200){
+				console.log(http.responseText);
+			}else if(http.readyState == 4){
+				errorCallback(http.status, http.statusText);
+			}
+		});
+		
+		http.send();
+	});
+
 
 	document.getElementById("btnPost").addEventListener("click", ()=>{
 		
@@ -82,48 +102,48 @@ window.addEventListener("load", ()=>{
 		http.send(json);
 	});
 
-	// document.getElementById("btnPut").addEventListener("click", ()=>{
+	document.getElementById("btnPut").addEventListener("click", ()=>{
 		
-	// 	var cId = prompt("Enter the id of the customer you'd like to update");
+		var pId = prompt("Enter the id of the product you'd like to update");
 
-	// 	var http = new XMLHttpRequest();
+		var http = new XMLHttpRequest();
 		
-	// 	http.open("PUT", baseURL + cId);
+		http.open("PUT", baseURL + pId);
 		
-	// 	http.addEventListener("readystatechange", ()=>{
-	// 		if(http.readyState == 4 && http.status == 200){
-	// 			console.log(http.responseText);
-	// 		}else if(http.readyState == 4){
-	// 			errorCallback(http.status, http.statusText);
-	// 		}
-	// 	});
-	// 	//updated customer data
-	// 	var customer = {customerId: cId, firstName: "Pete", lastName:"Jackson", address: "321 Street Rd", city: "Madison", state: "Wisconsin", zip: "54321",email:"pj@gmail.com"};
-	// 	var json = JSON.stringify(customer);
-	// 	http.send(json);
-	// });
+		http.addEventListener("readystatechange", ()=>{
+			if(http.readyState == 4 && http.status == 200){
+				console.log(http.responseText);
+			}else if(http.readyState == 4){
+				errorCallback(http.status, http.statusText);
+			}
+		});
+		//updated product data
+		var product = {productId: pId, consoleName: "PC Games", productName:"Deep Rock Galactica", loosePrice: 47.88, cibPrice: 59.99, gamestopPrice: 54.99, gamestopTradePrice: 25.33, upc: "001234567800", quantity: 4};
+		var json = JSON.stringify(product);
+		http.send(json);
+	});
 
-	// document.getElementById("btnDelete").addEventListener("click", ()=>{
+	document.getElementById("btnDelete").addEventListener("click", ()=>{
 		
-	// 	var id = prompt("Enter a customer id to delete");
+		var id = prompt("Enter a product id to delete");
 
-	// 	var url = baseURL + id;
+		var url = baseURL + id;
 
-	// 	var http = new XMLHttpRequest();
-	// 	http.open("DELETE", url);
-	// 	//alert(url);
+		var http = new XMLHttpRequest();
+		http.open("DELETE", url);
+		//alert(url);
 		
-	// 	http.addEventListener("readystatechange", ()=>{
-	// 		if(http.readyState == 4 && http.status == 200){
-	// 			console.log(http.responseText);
-	// 		}else if(http.readyState == 4){
-	// 			errorCallback(http.status, http.statusText);
-	// 		}
-	// 	});
+		http.addEventListener("readystatechange", ()=>{
+			if(http.readyState == 4 && http.status == 200){
+				console.log(http.responseText);
+			}else if(http.readyState == 4){
+				errorCallback(http.status, http.statusText);
+			}
+		});
 
-	// 	http.setRequestHeader("Content-Type","application/json");
-	// 	http.send();
-	// });
+		http.setRequestHeader("Content-Type","application/json");
+		http.send();
+	});
 
 });
 	</script>
@@ -134,6 +154,8 @@ window.addEventListener("load", ()=>{
 	<input type="button" id="btnGetAllByConsole" value="Get All By Console">
 	<br>
 	<input type="button" id="btnGetByProduct" value="Get Product By Product Name">
+	<br>
+	<input type="button" id="btnGetByUpc" value="Get Product By UPC">
 	<br>
 	<input type="button" id="btnPost" value="Post Product">
 	<br>
