Fixed typos in back end code. Started to work on front end

--- a/inventory/index.html
+++ b/inventory/index.html
@@ -16,7 +16,8 @@
     <div id="header"></div>
     <div id="content-pane">
         <div id="left-column" class="column left"></div>
-        <div id="main-container" class="column right"></div>
+        <div id ="mid-column" class ="columnn mid"></div>
+        <div id="right-column" class="column right"></div>
     </div>
     <div id="footer"></div>
 </body>
