Added ajax js, worked on front end

--- a/inventory/index.html
+++ b/inventory/index.html
@@ -16,7 +16,7 @@
     <div id="header"></div>
     <div id="content-pane">
         <div id="left-column" class="column left"></div>
-        <div id ="mid-column" class ="columnn mid"></div>
+        <div id ="mid-column" class ="column mid"></div>
         <div id="right-column" class="column right"></div>
     </div>
     <div id="footer"></div>
