--- a/inventory/index.html
+++ b/inventory/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
     
+    <script src="js/ajax.js"></script>
     <script src="js/inventory-module.js"></script>
     <script src="js/main.js"></script>
     
