Tested treade in product web service

--- a/web-services/tests/tradeinproduct-web-service-tests.html
+++ b/web-services/tests/tradeinproduct-web-service-tests.html
@@ -155,7 +155,7 @@ window.addEventListener("load", ()=>{
 	</script>
 </head>
 <body>
-	<h1>Customer Web Service Tests</h1>
+	<h1>TradeInProduct Web Service Tests</h1>
 	<p>Make sure to have the Network tab open in developer tools so that you can watch the HTTP request.</p>
 	<input type="button" id="btnGetAll" value="Get All Trade In Products">
 	<br>
