Fixed searchByCustomerName query. Continued to work on front end

--- a/web-services/tests/customer-web-service-tests.html
+++ b/web-services/tests/customer-web-service-tests.html
@@ -60,9 +60,9 @@ window.addEventListener("load", ()=>{
 
 	document.getElementById("btnGetByCustomerLastName").addEventListener("click", ()=>{
 		
-		var custLastName = prompt("Enter a customer last name");
+		var custName = prompt("Enter a customer name");
 
-		var url = encodeURI(baseURL + custLastName);
+		var url = encodeURI(baseURL + custName);
 
 		var http = new XMLHttpRequest();
 		http.open("GET", url);
